nebula sql life
Signed-off-by: Zhi Yiliu <2584074296@qq.com>

--- a/docs/notes/6.s081/7-进程切换.md
+++ b/docs/notes/6.s081/7-进程切换.md
@@ -2,7 +2,7 @@
 title: 7-进程切换
 date: 2023-09-15 22:17:49
 tags:
-  - 6.s081
+  - Operator System
 ---
 
 # 进程切换
@@ -17,13 +17,13 @@ tags:
 
 - sched 函数进行合理性检查，最后调用 swtch 函数交换当前进程的上下文和 CPU 调度线程的上下文，返回地址为切换后上下文的 ra 寄存器存的值；实际上是 scheduler 函数
 
-  ~~~c
+  ```c
   void
   sched(void)
   {
     int intena;
     struct proc *p = myproc();
-  
+
     if(!holding(&p->lock))
       panic("sched p->lock");
     if(mycpu()->noff != 1)
@@ -32,29 +32,29 @@ tags:
       panic("sched running");
     if(intr_get())
       panic("sched interruptible");
-  
+
     intena = mycpu()->intena;
     swtch(&p->context, &mycpu()->context);
     mycpu()->intena = intena;
   }
-  ~~~
+  ```
 
-- 调度器找到一个可运行的进程，再次运行swtch函数切换上下文， 此时的 ra 寄存器是之前是被定时器中断通过 sched 函数挂起的
+- 调度器找到一个可运行的进程，再次运行 swtch 函数切换上下文， 此时的 ra 寄存器是之前是被定时器中断通过 sched 函数挂起的
 
-  ~~~c
+  ```c
   void
   scheduler(void)
   {
     struct proc *p;
     struct cpu *c = mycpu();
-  
+
     c->proc = 0;
     for(;;){
       // The most recent process to run may have had interrupts
       // turned off; enable them to avoid a deadlock if all
       // processes are waiting.
       intr_on();
-  
+
       for(p = proc; p < &proc[NPROC]; p++) {
         acquire(&p->lock);
         if(p->state == RUNNABLE) {
@@ -64,7 +64,7 @@ tags:
           p->state = RUNNING;
           c->proc = p;
           swtch(&c->context, &p->context);
-  
+
           // Process is done running for now.
           // It should have changed its p->state before coming back.
           c->proc = 0;
@@ -73,6 +73,6 @@ tags:
       }
     }
   }
-  ~~~
+  ```
 
 - 第一次切换进程时，构造一个 forkret，allocproc 设置了 ra 和 sp 寄存器，forkret 本身只释放锁，调用 usertrapret
