--- a/docs/notes/CSAPP/5-优化程序性能.md
+++ b/docs/notes/CSAPP/5-优化程序性能.md
@@ -2,7 +2,7 @@
 title: csapp-5-优化程序性能
 date: 2023-09-12 19:49:49
 tags:
-  - CSAPP
+  - System Arch
 ---
 
 # Chapter 5 优化程序性能
@@ -85,14 +85,13 @@ void combine3(vec_ptr v, data_t* dest) {
 ## 限制因素
 
 - 寄存器溢出：如果溢出，将两个数相乘直接保存在寄存器的优势消失
-- 分支预测和预测错误惩罚：惩罚是19个时钟周期
+- 分支预测和预测错误惩罚：惩罚是 19 个时钟周期
   - 循环分支被预测为选择分支，只在最后一次导致预测错误惩罚
-  - 书写适合用条件传送实现的代码：三元操作符代替if-else
+  - 书写适合用条件传送实现的代码：三元操作符代替 if-else
 
 ## 内存性能
 
-- 加载的性能：除开使用cache，每次进行取取操作数，都需要访存
+- 加载的性能：除开使用 cache，每次进行取取操作数，都需要访存
 - 存储的性能：每次存放结果，也需要访存
 
-- 注意程序中可能存在潜在的加载-存储相关的操作（src和dest指向相同的地址或者dest依赖于src计算后存储的新结果）
-
+- 注意程序中可能存在潜在的加载-存储相关的操作（src 和 dest 指向相同的地址或者 dest 依赖于 src 计算后存储的新结果）
