--- a/docs/notes/CSAPP/程序的结构和执行.md
+++ b/docs/notes/CSAPP/程序的结构和执行.md
@@ -2,15 +2,16 @@
 title: csapp-程序的结构和执行
 date: 2023-09-18 22:17:49
 tags:
-  - CSAPP
+  - System Arch
 ---
+
 # 程序的结构和执行
 
 ## 程序的机器级表示
 
 - 使用**基于条件的数据传送**替代**基于条件的控制转移**
 
-  ~~~c
+  ```c
   // 基于条件的数据传送
   int ntest = x >= y;
   if (ntest) {
@@ -18,20 +19,20 @@ tags:
   } else {
       ...
   }
-  
+
   // 基于条件的控制转移
   if (x >y) {
-      
-  } else {
-      
-  }
-  ~~~
 
-- while的两种汇编形式
+  } else {
+
+  }
+  ```
+
+- while 的两种汇编形式
 
   - jump to the middle
 
-    ~~~c
+    ```c
     	go to test;
     loop:
     	body
@@ -40,11 +41,11 @@ tags:
     	if (t){
         	goto loop;
     	}
-    ~~~
+    ```
 
   - guarded-do
 
-    ~~~c
+    ```c
     t = test-expr;
     if(!t){
         goto done;
@@ -56,7 +57,7 @@ tags:
             goto loop;
         }
     done:
-    ~~~
+    ```
 
 - 对抗缓冲区溢出攻击
   - 地址空间布局随机化：栈随机化，每次先在栈上随机分配一大块空间；程序每次加载地址不同
@@ -74,6 +75,6 @@ tags:
 - 消除不必要的内存引用
   - 使用临时变量替代指针
 - 循环展开
-- 提高程序并行性：可以考虑使用SIMD向量指令
-- 对dst和src地址相同的取值操作，造成写/读相关问题
+- 提高程序并行性：可以考虑使用 SIMD 向量指令
+- 对 dst 和 src 地址相同的取值操作，造成写/读相关问题
   - 存储单元中存在存储缓冲区，每个缓存区由地址`s_addr`和数据`s_data`组成；`src`和`dst`不同时，数据和地址可以并行取出，如果相同，必须保证`s_addr`在`s_data`前完成
