--- a/docs/notes/CSAPP/6-存储器层次结构.md
+++ b/docs/notes/CSAPP/6-存储器层次结构.md
@@ -2,8 +2,7 @@
 title: csapp-6-存储器层次结构
 date: 2023-09-12 22:17:49
 tags:
-  - CSAPP
-
+  - System Arch
 ---
 
 # Chapter 6 存储器层次结构
@@ -26,7 +25,7 @@ tags:
 - Solid State Disk (SSD)，是基于闪存的存储技术
   - 闪存芯片替代传统旋转磁盘中的机械驱动器
   - 闪存翻译层是一个硬件/固件设备，将对逻辑块的请求翻译成对底层物理设备的访问
-  - SSD以页为读写单位
+  - SSD 以页为读写单位
   - 将擦除平均分布到所有的块上
 
 ![](C:\Users\我\Desktop\MyblogImg\csapp\SSD.png)
@@ -41,17 +40,17 @@ tags:
 
 ### cache
 
-- 在CPU寄存器和主存中插入了一个小的SRAM高速缓存存储器，称为L1 cache；4 clock
-- 在L1 cache和 main memory中插入L2 cache，10 clock
-- 在L2 cache和L3 cache中插入L3 cache，50 clock
+- 在 CPU 寄存器和主存中插入了一个小的 SRAM 高速缓存存储器，称为 L1 cache；4 clock
+- 在 L1 cache 和 main memory 中插入 L2 cache，10 clock
+- 在 L2 cache 和 L3 cache 中插入 L3 cache，50 clock
 
 ![](C:\Users\我\Desktop\MyblogImg\csapp\cache_structure.png)
 
-- 使用中间的位来索引；如果用高位来索引，相邻的块基本会被映射到同一个cache行，cache命中大大减少
+- 使用中间的位来索引；如果用高位来索引，相邻的块基本会被映射到同一个 cache 行，cache 命中大大减少
 
 ![](C:\Users\我\Desktop\MyblogImg\csapp\cache_index.png)
 
-#### core中的cache
+#### core 中的 cache
 
 ![](C:\Users\我\Desktop\MyblogImg\csapp\core_cache.png)
 
