--- a/docs/notes/CSAPP/7-链接.md
+++ b/docs/notes/CSAPP/7-链接.md
@@ -2,9 +2,7 @@
 title: csapp-7-链接
 date: 2023-09-18 22:17:49
 tags:
-  - CSAPP
-
-
+  - System Arch
 ---
 
 # Chapter 7 链接
@@ -13,17 +11,17 @@ tags:
 
 - 符号解析
 - 重定位
-  - 编译器和汇编器生成.text和.data
+  - 编译器和汇编器生成.text 和.data
   - 链接器通过把每个符号定义和一个内存位置关联，对这些节进行**重定位**；修改引用，让符号指向这个内存位置
 
 ## 可重定位目标文件
 
-- .rel.*：不同节的重定位信息
-- .line：原始C程序和.text节中机器指令的映射，"-g"得到
+- .rel.\*：不同节的重定位信息
+- .line：原始 C 程序和.text 节中机器指令的映射，"-g"得到
 
 ![](C:\Users\我\Desktop\MyblogImg\csapp\ELF.png)
 
-- .bss：未初始化的静态变量，以及初始化为0的全局或静态变量
+- .bss：未初始化的静态变量，以及初始化为 0 的全局或静态变量
 - COMMON：未初始化的全局变量
 
 ### 解析多重定义符号
@@ -42,7 +40,7 @@ tags:
 
 ### 重定位算法
 
-~~~c
+```c
 // relocation entry
 typedef struct {
     long offset;	// 重定位的偏移
@@ -50,9 +48,7 @@ typedef struct {
     	symbol:32;	// 符号表索引
     long addend;	// 有符号常数，用于偏移调整
 };
-~~~
-
-
+```
 
 ![](C:\Users\我\Desktop\MyblogImg\csapp\relocate.png)
 
@@ -64,20 +60,20 @@ typedef struct {
 
 - 加载但是不需要重定位代码——位置无关代码（PIC）
 - gcc -fpic，共享库编译需要使用
-- 基于.text和.data的距离总是保持不变
+- 基于.text 和.data 的距离总是保持不变
 
-### PIC数据引用
+### PIC 数据引用
 
 - 在数据段开始创建一个表，全局偏移量表（Global Offset Table）
 
 ![](C:\Users\我\Desktop\MyblogImg\csapp\PIC_DATA.png)
 
-### PIC函数调用
+### PIC 函数调用
 
 - 延迟绑定，将过程地址的绑定推迟到第一次调用该过程时
-- 通过GOT和PLT（过程链接表）来实现；PLT是代码段的表，GOT是数据段的表
-- 通过两个表的跳转，将函数的ID和动态链接器的参数压入栈中，进入动态链接器进行重定位和修复符号执行的地址
-  - 第一条PLT指令通过GOT[4]进行间接跳转；跳转只是跳到下一条指令
+- 通过 GOT 和 PLT（过程链接表）来实现；PLT 是代码段的表，GOT 是数据段的表
+- 通过两个表的跳转，将函数的 ID 和动态链接器的参数压入栈中，进入动态链接器进行重定位和修复符号执行的地址
+  - 第一条 PLT 指令通过 GOT[4]进行间接跳转；跳转只是跳到下一条指令
 
 ![](C:\Users\我\Desktop\MyblogImg\csapp\PLT.png)
 
