add nebula sql modify
Signed-off-by: Zhi Yiliu <2584074296@qq.com>

--- a/docs/notes/nebula/5.nGQL life.md
+++ b/docs/notes/nebula/5.nGQL life.md
@@ -13,7 +13,7 @@ tags:
 # 一条 nGQL 语句的前世今生
 
 1. 用户在 console 或者通过 sdk 输入 Query 语句到 Graph Service，返回给用户 Future，然后开始执行回调，即下面的整个流程。
-2. Graph Service 将 Query、Session、Storage 等打包成 Request Context，随后将 Request Context 打包成 Query Instance 随后开始执行 parse、validate、optimize、execute 整个流程。
+2. Graph Service 将 Query、Session、Storage 等打包成 Request Context，随后将 Request Context 打包成 Query Context，创建 Query Instance 随后开始执行 parse、validate、optimize、execute 整个流程。
    - 在 validate 结束后，首先先获取 statement 对应的 ast context，然后再转换成 plan node tree。
    - 在 Graph Service 获取到 query 并启动整个异步执行流程后，返回 Future 给 client。
 3. 然后将 Request Context 传入 Scheduler，用 Scheduler 的内存池按照算子树依次执行每个物理节点计划。
@@ -21,6 +21,35 @@ tags:
 5. 每个 processor 内部从 RocksDB 中获取或者存储 KV 对，实际上是通过 raft-wal 进行集群间的同步，然后用结果去设置 promise，graphd 的 future 接收到后继续向上传递结果，直到返回给 client 的结果。
 
 ![](img/exec.png)
+
+## Contexts
+
+### Query Context
+
+Query、Session、Storage 等打包成 Request Context，随后将 Request Context 打包成 Query Context
+
+Query Context 的生命周期从语句传入 graphd 开始，到向 client 返回结果
+
+```c++
+RequestContextPtr rctx_;                    // Session 传入
+std::unique_ptr<ValidateContext> vctx_;     // validate 修改
+std::unique_ptr<ExecutionContext> ectx_;    // Execution 修改
+std::unique_ptr<ExecutionPlan> ep_;         // planner 修改
+```
+
+### CreateSchemaContext
+
+CreateTagValidator 自己拥有的上下文，用于将 Sentence 转变为 Plan，里面是需要传递给 CreateTagNode 的参数。
+
+Validator 自己独有的 Context，生命周期只在 Validator 生成到转换为 Logical Plan
+
+```c++
+struct CreateSchemaContext final : public AstContext {
+bool ifNotExist{false};
+std::string name;
+meta::cpp2::Schema schema;
+};
+```
 
 ## Client
 
@@ -121,7 +150,15 @@ graphd 大体上分为 parse，validate，planner，optimize，execute 这几个
   ```
 
 - 将执行计划树交给 Optimizer 进行优化，nebula 现在的优化是 Rule-based optimization，每个执行计划需要遍历所有的 rules，得到最优的执行计划。
-- 然后将整个计划交给 Scheduler 进行执行，在 Scheduler 中按照计划树的父子关系，从下之上依此执行计划，所有的计划都是用 Future 异步执行。parent plan 节点需要所有的 children plan 节点都执行完后才开始执行。
+- 然后将整个计划交给 Scheduler 进行执行，在 Scheduler 中按照计划树的父子关系，从下之上依此执行计划，所有的计划都是用 Future 异步执行。
+
+  - 首先先根据 Logical Plan 构造出 Physical Plan(Execution Plan)
+    ```c++
+    Executor *Executor::makeExecutor(const PlanNode *node,
+                                 QueryContext *qctx,
+                                 std::unordered_map<int64_t, Executor *> *visited)
+    ```
+  - 对 Executor 进行调度，parent plan 节点需要所有的 children plan 节点都执行完后才开始执行。
 
   ```c++
   folly::Future<Status> AsyncMsgNotifyBasedScheduler::scheduleExecutor(
