nebula vsearch note 1
Signed-off-by: Zhi Yiliu <2584074296@qq.com>

--- a/docs/projects/nebula-vsearch/understanding/8.a kv life.md
+++ b/docs/projects/nebula-vsearch/understanding/8.a kv life.md
@@ -6,7 +6,7 @@
 
 在 Nebula Graph 中，Vertex 的创建通常通过 `AddVerticesProcessor` executor 来完成。它会将 Vertex 要插入的数据已经元数据打包成 raft-wal log，提交到 Raft Part 中，最后在 Part::commitLogs()中将数据写入到 RocksDB。
 
-![](../vector_storage.png)
+![](../img/vector_storage.png)
 
 ## Vertex Search
 
@@ -97,4 +97,3 @@ for (auto* tagNode : tagNodes_) {
 }
 ```
 
-## Vertex Deletion
