--- a/docs/summary/研究生总结/研一下总结.md
+++ b/docs/summary/研究生总结/研一下总结.md
@@ -1,24 +1,33 @@
 ---
-
 title: 研一下总结
 tags:
-
-- summary
-  icon: material/calendar-week
-
+  - summary
+icon: material/calendar-week
 ---
 
-## 计划
-
-\[[研一上总结]\]
-
-## 实际总结
+## 总结
 
 - 先完成了 CMU15445 对应的 bustub 项目的实践，对数据库的各种基础知识又有了新的理解
 - 又完成了 tidb 的小项目 tinykv，对 raft 有了一定的理解
   > 感觉还是需要在生产中遇到问题，才能理解一些设计上的考量
   > 但是越来越感觉**分布式是一个脏活**，处理层出不穷的 corner case
 - 成功申请下了开源之夏，为 nebula graph 增加 ann search 能力
-  - 基本上整个暑假 + 9-10月基本上在搞这个项目，简历上可以再来一笔
-- 基本上6月开始看一些岗位的 job description，越发感觉数据库没什么增长点了，开始考虑和 AI 结合的一些数据库岗位，但是很少
+  - 基本上整个暑假 + 9-10 月基本上在搞这个项目，简历上可以再来一笔
+- 基本上 6 月开始看一些岗位的 job description，越发感觉数据库没什么增长点了，开始考虑和 AI 结合的一些数据库岗位，但是很少
   - 和实习的师兄们交流发现大家对 LLM 非常看好
+
+---
+
+2025-12-13 更新
+其实研一下可以说是思想上发生巨大转变的一学期了。
+
+上学期搞完 OB 比赛之后，感觉向量数据库有搞头就想着以后搞这个方向了。所以抱着这个目标开始有目的地去学习数据库相关的知识。
+
+- CMU15445 课程 + bustub 项目
+- tidb 的 tinykv 项目
+  其实目的主要就是申请开源之夏的实习机会。结果幸运地申请到了 nebula graph 的实习机会，项目是给 nebula graph 加入 ann search 能力。
+  基本上从 7-9 月份都在搞这个项目，又学习了下分布式图数据库是如何工作的。
+
+不过在这个过程中，感觉数据库方向整体都不是很景气，即使有大订单也是政府企业或者是银行金融行业，感觉未来还是在 LLM 相关方向，当时还没有完全下定决心，不过实际上已经开始暗暗关注 LLM 相关的知识了。
+
+中间还出去和本科室友玩了两次，感觉旅游是得多拍照啊，下次旅游必买个相机狠狠拍照:laughing:
