--- a/docs/summary/研究生总结/研一上总结.md
+++ b/docs/summary/研究生总结/研一上总结.md
@@ -1,11 +1,9 @@
 ---
-
 title: 研一上总结
 tags:
-
-- summary
-  icon: material/calendar-week
-
+  - summary
+icon: material/calendar-week
+updated: 2025-12-13
 ---
 
 当时研一上太忙，没来得及进行复盘；现在过去差不多一年来复盘一下当时的过程
@@ -19,5 +17,17 @@ tags:
   - 写了 miniob，实现了很多功能，尤其是 2024 年加入了向量搜索功能，让我想搞向量数据库，在向量索引方向发论文
   - 在 ob 决赛期间，看了一些向量索引方向的论文和向量化引擎方向的论文，感觉数据库必须和 AI 结合才有出路
 - 我当时还加入了实验室的 MLSYS 论文研讨组，看了很多 llm inference 的论文，感觉这个也是一个比较好的方向，但是因为在打比赛，而且基础知识需要补的很多，就暂时没考虑了
-  > 😿现在想想，当时不应该放弃这个方向的，现在就不至于这么急迫了
-- 最后比赛成绩还不错，全国第11，也是在简历上有的写了
+  > 😿 现在想想，当时不应该放弃这个方向的，现在就不至于这么急迫了
+- 最后比赛成绩还不错，全国第 11，也是在简历上有的写了
+
+---
+
+2025-12-13 更新
+今天翻到去年拍的照片，发现当时的我还是比较青涩的，感觉~~实验室~~时间催人老啊。
+
+本来开始想复刻师兄们的道路的先搞搞 linux 网络，做点数据库相关的项目，在暑期实个习感觉就非常圆满了。
+
+结果当时还没毕业直接被拉去搞别的去了，感觉当时就是命运齿轮转动的开始。好了，感慨留在未来，再次复盘下当时的研一上学期(这次多补点心情相关的记录了)
+
+- 实验室没什么好说的了，写项目书就完事了，搞计算机的直接搞硬件去了:sob:。不过中间实验室搞了个 MLSYS 论文研讨组，看了很多 llm inference 相关的论文，感觉这个方向还是不错的，不过当时的我仔细想了下，还是选择了数据库方向，因为我当时对 AI 还是有点抵触情绪，也有相当一部分原因感觉时间上来不及(**其实主要在打 OB 比赛**)。现在想想感觉应该早点捡起来的。
+- 比较有意思的经历就是打 OB 比赛了，几周快速看了 2 年都没看下来的 CMU15445 课程，对工业级别数据库上手了一番，感觉收获确实很大。而且当时经常在实验室熬夜写代码，和师兄同门们一起讨论问题，吃夜宵，吃火锅，喝霸王茶姬，感觉那段时间生活还是挺充实的。
