blog with cover image and description
Signed-off-by: Zhi Yiliu <2584074296@qq.com>

--- a/docs/blogs/posts/CS144.md
+++ b/docs/blogs/posts/CS144.md
@@ -2,6 +2,8 @@
 title: CS144-TCP协议简单实现
 created: 2024-04-22
 tags: CS144
+description: 介绍CS144课程中对TCP协议的简单实现，涵盖IP包和TCP报文的构建、数据格式以及TCP工作流程等内容。
+cover: /img/cs144.jpg
 ---
 
 # Minnow
